--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ allprojects {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
         maven {
             url 'https://android-sdk.is.com/'
